# Parallel_Image_Convolution

./: .gitignore  CMakeLists.txt  README.md  build.txt  buildGuide.txt
docs/: CONVOLUTION_THEORY.md  KERNEL_THEORY.md  KEYWORD.md  NOTE.md
include/: convolution.hpp  kernels.hpp  timer.hpp  utils.hpp
script/: build_cuda.bat  plot.py
src/: convolutionCpu.cpp  convolutionCuda.cu  convolutionOmp.cpp  main.cpp
